    previously widgets were called first, and if they returned anything, gadgets weren't called at all
    now gadgets are called first, then widgets are always called and can override
 - add a 3rd param to DefaultCommand callin: the current default command
    works with the above: gadgets receive the default engine cmd,
    widgets then receive what gadgets returned (possibly engine default)
 - add  Spring.GetGlobalLos(allyTeamID) -> bool  to LuaSyncedRead
 - add  Spring.IsNoCostEnabled() -> bool  to LuaSyncedRead
 - add Spring.SetWind(number minStrength, number maxStrength)
 - add Spring.SetTidal(number strength)
 - add Spring.GetTidal
 - add Spring.{Unit,Feature}Rendering.SetProjectileLuaDraw
 - add Spring.{Unit,Feature}Rendering.Set{Deferred,Forward}MaterialUniform
 - add Spring.{Unit,Feature}Rendering.Clear{Deferred,Forward}MaterialUniform
 - add Spring.AddObjectDecal
 ! rename Spring.RemoveBuildingDecal to Spring.RemoveObjectDecal
 - add Spring.GetLuaMemUsage to LuaUnsyncedRead
   returns the number of (kilo-)bytes used and (kilo-)allocations performed
   by the calling Lua state individually, as well as by all states globally
 - add Spring.GetVidMemUsage to LuaUnsyncedRead
 - add Spring.Ping callout and corresponding Pong callin
 - add Spring.GetMapStartPositions callout
 - add gl.GetViewRange callout
 - add DrawMaterial callin
 - add `VFS.GAME` as a synonym to `VFS.MOD`
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this
 - Add Spring.SetVideoCapturingTimeOffset() for > 30fps video capturing
 - default `defs.lua` now reads a new file, `defs_post.lua`, which
   currently filters out movedefs unused by any unitdef (previously
   this was done by the engine). You can prevent this filter by adding
   the `dont_remove` field to such movedefs. This is useful to make
   them available in `Spring.MoveCtrl.SetMoveDef` but beware the perf cost.